# yt-factify

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
docs/guides/: project_guide.md
docs/specs/: features.md  stories.md  tech_spec.md
src/yt_factify/: __init__.py  __main__.py  belief_systems.py  classification.py  cli.py  config.py  extraction.py  llm.py  logging.py  models.py  pipeline.py  rendering.py  throttle.py  topics.py  transcript.py  validation.py
src/yt_factify/modules/: README.md  __init__.py  political_progressivism.json  religious_theism.json  scientific_materialism.json
src/yt_factify/prompts/: __init__.py  classification.py  credibility.py  extraction.py  topics.py
tests/: conftest.py  test_belief_systems.py  test_classification.py  test_cli.py  test_config.py  test_extraction.py  test_gentlify_integration.py  test_golden_and_edge_cases.py  test_library_api.py  test_models.py  test_pipeline.py  test_prompts.py  test_rendering.py  test_throttle.py  test_topics.py  test_transcript.py  test_validation.py
tests/fixtures/llm_responses/: classification_valid.json  credibility_valid.json  extraction_partial_invalid.json  extraction_valid.json  extraction_with_fences.json  topics_valid.json
tests/fixtures/transcripts/: long_interview.json  opinion_editorial.json  short_news_clip.json  short_tutorial.json
