[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-factify"
version = "0.1.5"
description = "Extract structured, auditable facts and quotes from YouTube video transcripts"
license = "MPL-2.0"
requires-python = ">=3.14"
authors = [
    { name = "Pointmatic" },
]
keywords = ["youtube", "transcript", "facts", "quotes", "llm", "extraction"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.0",
    "litellm>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "structlog>=24.0",
    "yt-fetch @ git+https://github.com/pointmatic/yt-fetch.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
yt-factify = "yt_factify.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
strict = true
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["yt_fetch.*", "litellm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
